--- a/LAMP/docker-compose.yml
+++ b/LAMP/docker-compose.yml
@@ -1,41 +1,36 @@
-version: '3.1'
-
+version: "3.9"
 services:
-  web:
+  apache-php:
     build: .
-    container_name: apache
+    ports:
+      - "80:80"
     volumes:
-      - ./www:/var/www/html
-      - ./php.ini:/usr/local/etc/php/php.ini
+      - ./html:/var/www/html
+    networks:
+      - lamp-network
+  phpmyadmin:
+    image: phpmyadmin
+    links:
+      - mariadb:db
     ports:
       - "8080:80"
-    depends_on:
-      - db
-
-  db:
-    image: mysql:5.7
-    container_name: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: test
-      MYSQL_USER: user
-      MYSQL_PASSWORD: user
-    volumes:
-      - db_data:/var/lib/mysql
+    networks:
+      - lamp-network
+  mariadb:
+    image: mariadb
     ports:
       - "3306:3306"
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
+    command: --lower_case_table_names=1
+    volumes:
+      - mariadb:/var/lib/mysql
+    networks:
+      - lamp-network
     environment:
-      PMA_HOST: db
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - "8090:80"
-    depends_on:
-      - db
+      MARIADB_ROOT_PASSWORD: admin
 
 volumes:
-  db_data:
+    mariadb:
+
+networks:
+    lamp-network:
+      name: lamp-network
